--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
         </div>
         <nav>
           <ul>
-            <li class="current"><a href="/acmeweb/home.html">Home</a></li>
+            <li class="current"><a href="/acmeweb/">Home</a></li>
             <li><a href="/acmeweb/about.html">About</a></li>
             <li><a href="/acmeweb/services.html">Services</a></li>
           </ul>
